fix: use flex gaps

--- a/sass/_site.scss
+++ b/sass/_site.scss
@@ -246,12 +246,12 @@ a.zola-anchor {
     font-size: 1em;
     display: flex;
     flex-wrap: wrap;
+    gap: 10px;
     justify-content: center;
     li {
       flex: 1 1 1;
       text-align: center;
       vertical-align: middle;
-      margin-right: 10px;
       -webkit-transform: translateZ(0);
       transform: translateZ(0);
       box-shadow: 0 0 1px rgba(0, 0, 0, 0);
@@ -290,9 +290,6 @@ a.zola-anchor {
           -webkit-transform: scaleY(1);
           transform: scaleY(1);
         }
-      }
-      &:last-child {
-        margin-right: 0px;
       }
       a {
         display: inline-block;
